# AIComplianceFirewall

./: .gitignore  Cargo.toml  EXTERNAL.md  Makefile  README.md  app.py  config.py  docker-compose.yml  llm.py  main.py  pyproject.toml  requirements.txt  scanner.py  test_bridge.py
.github/workflows/: CI.yml
backend/: config.py  guard_service.py  models.py  policy.py  semantic.py
rules/: policy_rules.json  semantic_concepts.json
scripts/: build_graph.py
src/: lib.rs
static/: app.css  app.js
tests/: conftest.py  test_guard.py  test_policy.py  test_scanner.py  test_semantic.py  test_validator.py
ui/: app.py
